@@ -1,3 +1,8 @@
+2005-02-21  Daniel Macks  <dmacks@netspace.org>
+
+        * Package.pm: overhaul update_db, including warning immediately if
+	cannot update cache
+
 2005-02-20  Daniel Macks  <dmacks@netspace.org>
 
         * Engine.pm: backing out 'snapshot' until after 0.24
